TÃ¼m eksikler ve yeni Ã¶zellikler eklendi: Yeni itemlar, bataryalar, felaketler, canavarlar, komutlar

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,4 @@ commands:
     usage: /klan <kur|kristal|davet|ayril>
   kontrat:
     description: Kontrat panosu islemleri.
+    usage: /kontrat <list|olustur|teslim>
