--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,10 @@
             <version>7.2.9</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 </project>
