Pom.xml'e JitPack deposu eklendi ve VaultAPI bağımlılığı eklendi. Ana sınıf, CombatLogManager ve EconomyManager'ı entegre edecek şekilde güncellendi ve olay işleme iyileştirildi. Eğitim ve hayalet tarif özellikleri için komut kullanımını ve izinlerini genişletmek üzere plugin.yml dosyası değiştirildi.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,13 +4,16 @@ main: me.mami.stratocraft.Main
 api-version: 1.20
 authors: [Mami]
 depend: [WorldEdit]
+softdepend: [Vault]
 commands:
   klan:
     description: Klan yonetim komutlari.
-    usage: /klan <kur|kristal|davet|ayril>
+    usage: /klan <kur|kristal|davet|ayril|menü|market>
+    aliases: [klan, clan]
   kontrat:
     description: Kontrat panosu islemleri.
     usage: /kontrat <list|olustur|teslim>
+    aliases: [kontrat, contract]
 permissions:
   stratocraft.*:
     description: Tüm Stratocraft yetkileri
@@ -39,4 +42,10 @@ permissions:
     default: true
   stratocraft.structure.siege:
     description: Kuşatma anıtı kurma yetkisi
+    default: true
+  stratocraft.training:
+    description: Antrenman sistemi yetkisi
+    default: true
+  stratocraft.ghostrecipe:
+    description: Hayalet tarif görüntüleme yetkisi
     default: true
