--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: 10.0
 main: me.mami.stratocraft.Main
 api-version: 1.20
 authors: [Mami]
-depend: [WorldEdit]
+softdepend: [WorldEdit]
 softdepend: [Vault]
 commands:
   klan:
