Admin komutları eklendi ve klan sistemi için yeni özellikler tanımlandı. Klan kristali kurma ve kırma mekanizmaları geliştirildi. Klan çiti tarifleri ve klan eşyası kontrolü için yeni yöntemler eklendi. Ayrıca, klan liderinin kristali hareket ettirmesi sağlandı. plugin.yml dosyasında admin komutları için açıklamalar güncellendi.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,6 +14,10 @@ commands:
     description: Kontrat panosu islemleri.
     usage: /kontrat <list|olustur|teslim>
     aliases: [kontrat, contract]
+  stratocraft:
+    description: Admin test komutları (item, mob, disaster çağırma)
+    usage: /stratocraft <give|spawn|disaster|list|help>
+    aliases: [sc, stratocraft]
 permissions:
   stratocraft.*:
     description: Tüm Stratocraft yetkileri
