Yeni kervan, savaş mühendisliği ve kontrat yönetimi özellikleri eklendi. Admin komutları güncellenerek, kervan ve savaş yapıları için yeni komutlar tanımlandı. Ayrıca, kervan oluşturma ve yönetiminde anti-abuse kontrolleri ile birlikte, kervan hedefe ulaşma mekanizması geliştirildi. Ek olarak, kontrat yönetimi için suikast kontratları eklendi ve mevcut sistemler iyileştirildi. admin komutlarına yapıalrı otomatik yapan ve aktifleştirme malzemelerini veren komutlar eklendi.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,6 +41,13 @@ radar:
 structure:
   max-shield-fuel: 43200 # Maksimum kalkan yakıtı (saniye) - 12 saat
 
+# Kervan Ayarları
+caravan:
+  min-distance: 1000     # Minimum mesafe (blok) - Anti-abuse
+  min-value: 5000        # Minimum kervan değeri (altın) - Anti-abuse
+  min-stacks: 20         # Minimum stack sayısı - Anti-abuse (20 stack = 1280 item)
+  arrival-radius: 5     # Hedefe ulaşma yarıçapı (blok)
+
 # Performans Ayarları
 performance:
   async-saving: true     # Async kayıt aktif mi?
