Geliştirme: Main sınıfına yeni özel silah ve zırh dinleyicileri eklendi; ayrıca, yeni komutlar ve tarifler tanımlandı. Eğitim ve üreme çekirdekleri için yerleştirme mekanizmaları geliştirildi. Boss çağırma ve çiftleştirme sistemleri için güncellemeler yapıldı. Çeşitli iyileştirmeler ve hata düzeltmeleri ile birlikte, mevcut sistemlerin performansı artırıldı.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,6 +18,10 @@ commands:
     description: Admin test komutları (item, mob, disaster çağırma)
     usage: /stratocraft <give|spawn|disaster|list|help>
     aliases: [sc, stratocraft]
+  weaponmode:
+    description: Silah modu değiştirme komutu
+    usage: /weaponmode <1|2|3>
+    aliases: [wm, weaponmode]
 permissions:
   stratocraft.*:
     description: Tüm Stratocraft yetkileri
